--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Formação Dev</title>
 </head>
 <body>
-    
+    <div class="externa">
+        <div class="caixa">#1</div>
+        <div class="caixa">#2</div>
+        <div class="caixa">#3</div>
+        <div class="caixa">#4</div>
+        <div class="caixa">#5</div>
+    </div>
 </body>
 </html>
