--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
     <title>Formação Dev</title>
 </head>
 <body>
-    <div class="externa">
-        <div class="caixa">#1</div>
-        <div class="caixa">#2</div>
-        <div class="caixa">#3</div>
-        <div class="caixa">#4</div>
-        <div class="caixa">#5</div>
+    <header>Cabeçalho</header>
+    <div id="central">
+        <main>
+            Conteudo Principal
+        </main>
+
+        <aside>
+            Area Lateral
+            <nav>
+                <a href="www.amazon.com.br" target="_blank">Amazon</a>
+            </nav>
+        </aside>
     </div>
+    <footer>Rodapé</footer>
 </body>
 </html>
